src/css/global.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@font-face {
  font-family: "SF Mono";
  src: url("../fonts/SFMono-Regular.woff") format("woff");
  font-weight: normal;
  font-style: normal;
  font-display: auto;
}

@font-face {
  font-family: "Open Sans";
  src: url("../fonts/OpenSans-Regular.ttf") format("truetype");
  font-weight: normal;
  font-style: normal;
  font-display: auto;
}

@font-face {
  font-family: "Raleway";
  src: url("../fonts/Raleway-Bold.ttf") format("truetype");
  font-weight: 700;
  font-style: normal;
  font-display: auto;
}

html {
  scroll-behavior: smooth;
  scrollbar-width: none; /* Firefox 64 */
}

body {
  font-family: "Open Sans";
  background-color: #1b0b1f;
  color: #e8e8ee;
}

::-webkit-scrollbar {
  display: none; /* Chrome */
}

.title {
  font-family: "Raleway";
}

.javascript,
.tools,
.made,
.btn-text {
  font-family: "SF Mono";
}

.projects::before,
.projects::after,
.about::before,
.about::after {
  content: "";
  display: block;
  height: 1px;
  width: 35px;
  background-color: #e8e8ee;
  position: relative;
  margin-left: 10px;
  margin-right: 10px;
}

.btn-text {
  border-color: #ffce5c;
}

.title,
.javascript,
.name {
  color: #9cb9e7;
}

.projectTitle,
.projectLink,
.socialIcon,
.arrowUp,
.angleRight,
.made {
  color: #ffce5c;
}

.arrowUp,
.made {
  color: #dddce5;
}

@media (min-width: 768px) {
  .projects::before,
  .projects::after,
  .about::before,
  .about::after {
    width: 100px;
    margin-left: 20px;
    margin-right: 20px;
  }
}

@media (min-width: 961px) and (orientation: landscape) {
  .project {
    min-height: 400px;
    height: 100%;
  }
}

@media (min-width: 1025px) {
  .projects::before,
  .projects::after,
  .about::before,
  .about::after {
    width: 150px;
  }

  .project {
    min-height: 500px;
  }

  /* .projImg > picture > img {
    width: 550px;
    height: 400px;
  } */
}

